# Project-Tango

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  REVERT.md  docker-compose.yml  package.json  provision_secrets.py
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  account_routes.py  accounts.py  auth.py  bootstrap_admin.py  contacts.json  db.py  history.py  jarvis_agent.py  macros.json  main.py  memory.py  migrate.py  personas.py  pyproject.toml  requirements.txt  run_production.py  sip.py  vision_context.py
backend/migrations/: 001_initial_schema.sql  002_create_memories.sql  003_open_loop_resolution.sql  004_accounts_auth.sql
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_isolation.py  test_main_security.py  test_migrations.py
backend/tools/: communication_tools.py  information_tools.py  media_tools.py  system_tools.py  web_tools.py
deploy/: Caddyfile.tango-api  README.md  schubert-preflight.sh  tango-backend.service  tango-tts.service  tango-web.service
docs/: AGENTS.md  CONTINUITY.md  PLAN.md  SPEC-004-F5TTS.md  architecture.md  setup.md
docs/decisions/: 2026-06-22-001-livekit-agents-sdk.md  (+9 more)
frontend/: .env.example  README.md  app-config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
public/: index.html
scripts/: deploy.sh  extract_jeremiah_reference.py  rollback.sh  setup-f5-tts.sh
specs/: SPEC-001-memory-layer.md  SPEC-002-open-loops.md  SPEC-003-phone-sip-mode.md
tts_server/: __init__.py  main.py  requirements.txt
(+87 files in other folders)
