[project]
name = "project-tango"
version = "0.1.0"
description = "Project Tango FastAPI and voice pipeline backend adapted from the AURA fork."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "livekit-api",
  "livekit-agents[deepgram,elevenlabs,openai,silero]~=1.5",
  "python-dotenv",
  "pydantic",
  "asyncpg",
  "slowapi",
  "httpx",
  "argon2-cffi>=23.1.0,<26",
  "email-validator>=2.1.0,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8030
